# JniDemo

./: .gitignore  README.md  settings.gradle.kts
app/: build.gradle.kts
app/src/androidTest/java/com/stephen/jnidemo/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/java/com/stephen/jnidemo/: JniDemoApplication.kt  JniTestEntrance.kt  MainActivity.kt
app/src/main/java/com/stephen/jnidemo/functionpage/: ImageBlurPage.kt
app/src/main/java/com/stephen/jnidemo/ui/theme/: Color.kt  Theme.kt  Type.kt
app/src/main/res/values/: themes.xml
app/src/test/java/com/stephen/jnidemo/: ExampleUnitTest.kt
gradle/: libs.versions.toml
gradle/wrapper/: gradle-wrapper.properties
jnitest/: build.gradle.kts
jnitest/src/androidTest/java/com/stephen/jnitest/: ExampleInstrumentedTest.kt
jnitest/src/main/cpp/: CMakeLists.txt  algorithm_test.cpp  cpu_affinity.cpp  image_blur.cpp  jni-test.cpp  single_linked_list.cpp  single_linked_list.h
jnitest/src/main/java/com/stephen/jnitest/: AlgorithmDemo.kt  CpuAffinity.kt  ImageBlurUtils.kt  JniUtils.kt
jnitest/src/main/java/com/stephen/jnitest/knalgorithm/: AssassinSolution.java  TopInterviewCollection.kt
jnitest/src/test/java/com/stephen/jnitest/: ExampleUnitTest.kt
